Simplify some code of Lua bindings by using proc-macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "elonafoobar-gui",
   "elonafoobar-log",
   "elonafoobar-lua",
+  "elonafoobar-lua-proc-macros",
   "elonafoobar-lua-sys",
   "elonafoobar-net",
   "elonafoobar-rand",
